# yuito

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  flake.nix  living-legacy-engine.md
.github/workflows/: cmake-multi-platform.yml
include/: NameGenerator.h  UUID.h  WorldGenerator.h
include/itemdb/: ItemDatabase.h
include/living-legacy/faction/: FactionSystem.h
include/living-legacy/legacy/: LegacySystem.h
include/living-legacy/reputation/: ReputationSystem.h
include/living-legacy/rumor/: RumorSystem.h
include/living-legacy/world/: WorldState.h
include/math/: Quaternion.h  Vec2.h
include/npc/: NPCManager.h
include/player/: EchoTouchLog.h  PlayerCharAdapter.h  PlayerCharacter.h  PlayerEntity.h  PlayerManager.h  Serializable.h
include/render/: AuraParticleSystem.h  CaveMeshGenerator.h  CharacterData.h  CharacterDraw.h  Husk.h  PrimitiveMeshGenerator.h  RenderSystem.h  RenderTypes.h  ShaderSource.h  Vec3.h  Vertex.h  colors.h
include/worldgen/: CaveGenerator.h  ChunkManager.h  GLWidget.h  Location.h  Noise.h  World.h  WorldGenerator.h  WorldTypes.h
libs/: LICENSE  lz4.c
src/: WorldGenerator.cpp  main.cpp
src/dev-tools/: index_items.cpp
src/itemdb/: ItemDatabase.cpp
src/living-legacy/faction/: FactionSystem.cpp
src/living-legacy/legacy/: LegacySystem.cpp
src/living-legacy/reputation/: ReputationSystem.cpp
src/living-legacy/rumor/: RumorSystem.cpp
src/living-legacy/world/: WorldState.cpp
src/npc/: NPCManager.cpp
src/player/: EchoTouchLog.cpp  PlayerCharAdapter.cpp  PlayerCharacter.cpp  PlayerEntity.cpp  PlayerManager.cpp
src/render/: AuraParticleSystem.cpp  CaveMeshGenerator.cpp  CharacterDraw.cpp  Husk.cpp  PrimitiveMeshGenerator.cpp  RenderSystem.cpp  colors.cpp
src/worldgen/: CaveGenerator.cpp  ChunkManager.cpp  GLWidget.cpp  Noise.cpp  World.cpp  WorldGenerator.cpp
